--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@
     <div class="app-container">
         <div class="header">
             <button class="theme-toggle" id="themeToggle"><i class="fas fa-sun"></i></button>
-            <h1 class="header-title"> 𝐓𝐚𝐠𝟐𝐂𝐚𝐬𝐡</h1>
+            <h1 class="header-title"> MYFA </h1>
         </div>
 
         <div class="profile-section">
