--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,9 @@
         .home-stat .value { font-size: 1.1rem; font-weight: 600; color: var(--text-primary); }
 
         .content-section { padding: 20px; margin-bottom: 80px; }
-        .card { background: var(--card-bg); border-radius: var(--border-radius); padding: 20px; margin-bottom: 20px; border: 1px solid var(--border-color); }
+        .card { background: var(--card-bg); border-radius: var(--border-radius); padding: 20px; margin-bottom: 20px; border: 1px solid var(--border-color); animation: fadeInUp 0.5s ease-out forwards; }
+        @keyframes fadeInUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        
         .section-title { font-size: 1.2rem; font-weight: 600; margin-bottom: 15px; color: var(--text-primary); }
         .btn { display: block; width: 100%; padding: 12px; border-radius: 8px; border: none; font-weight: 600; cursor: pointer; text-align: center; text-decoration: none; }
         .btn-primary { background: var(--primary-color); color: white; }
@@ -89,6 +91,7 @@
         .rank-1 .pfp { width: 80px; height: 80px; border-color: #ffd700; font-size: 2rem; }
         .rank-2 .pfp { width: 70px; height: 70px; border-color: #c0c0c0; }
         .leaderboard-list .user-item { display: flex; align-items: center; padding: 12px 5px; border-bottom: 1px solid var(--border-color); }
+        .user-item:last-child { border-bottom: none; }
         .user-item .rank { font-weight: bold; width: 40px; color: var(--text-secondary); text-align: center; }
         .user-item .username { flex: 1; font-weight: 500; color: var(--text-primary); }
         .user-item .score { font-weight: bold; color: var(--primary-color); }
@@ -105,7 +108,6 @@
         .requirements-list .status { font-size: 1.5rem; }
         .requirements-list .status.met { color: #50E3C2; }
         .requirements-list .status.not-met { color: #E64A4A; }
-
     </style>
 </head>
 <body>
