--- a/Index.html
+++ b/Index.html
@@ -81,12 +81,31 @@
         .status-message { text-align: center; margin-top: 15px; font-size: 0.85rem; padding: 8px; border-radius: 8px; display: none; }
         .success-message { background: rgba(80, 227, 194, 0.1); color: #50E3C2; display: block; } .error-message { background: rgba(230, 74, 74, 0.1); color: #E64A4A; display: block; }
 
+        /* --- NEW LEADERBOARD STYLES --- */
         .leaderboard-tabs { display: flex; margin-bottom: 20px; border-radius: 8px; background: var(--input-bg); padding: 5px; }
         .leaderboard-tab { flex: 1; padding: 10px; text-align: center; cursor: pointer; border-radius: 6px; font-weight: 500; }
         .leaderboard-tab.active { background: var(--primary-color); color: white; }
-        .top-3 { display: flex; justify-content: center; align-items: flex-end; gap: 15px; margin-bottom: 30px; }
-        .rank-circle .pfp { display: flex; align-items: center; justify-content: center; font-weight: bold; }
         
+        .top-3-container { display: flex; justify-content: center; align-items: flex-end; gap: 5px; min-height: 220px; margin-bottom: 30px; }
+        .leaderboard-podium { text-align: center; position: relative; }
+        .leaderboard-podium .pfp-container { position: relative; margin: 0 auto 10px; }
+        .leaderboard-podium .pfp { border-radius: 50%; background-size: cover; background-position: center; background-color: var(--input-bg); display: flex; align-items: center; justify-content: center; font-weight: bold; color: var(--text-primary); }
+        .leaderboard-podium .rank-badge { position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); background-color: white; border-radius: 50%; width: 24px; height: 24px; display: flex; align-items: center; justify-content: center; font-weight: 700; color: black; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        .leaderboard-podium .name { font-weight: 600; font-size: 1rem; color: var(--text-primary); }
+        .leaderboard-podium .score { font-size: 1.2rem; font-weight: 700; color: var(--accent-color); }
+        .leaderboard-podium .username { font-size: 0.8rem; color: var(--text-secondary); }
+
+        .rank-1 { align-self: flex-start; }
+        .rank-1 .pfp-container .crown { position: absolute; top: -20px; left: 50%; transform: translateX(-50%); font-size: 1.8rem; color: #ffd700; }
+        .rank-1 .pfp { width: 100px; height: 100px; border: 4px solid #ffd700; font-size: 2.5rem; }
+        .rank-1 .rank-badge { background-color: #ffd700; }
+
+        .rank-2 .pfp { width: 80px; height: 80px; border: 4px solid #c0c0c0; font-size: 2rem; }
+        .rank-2 .rank-badge { background-color: #c0c0c0; }
+
+        .rank-3 .pfp { width: 80px; height: 80px; border: 4px solid #cd7f32; font-size: 2rem; }
+        .rank-3 .rank-badge { background-color: #cd7f32; }
+
         .leaderboard-list-item { display: flex; align-items: center; background-color: var(--leaderboard-red); border-radius: 12px; padding: 5px; margin-bottom: 10px; }
         .leaderboard-list-item .rank { background-color: white; color: black; border-radius: 50%; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.1rem; flex-shrink: 0; z-index: 2; }
         .leaderboard-list-item .username { background-color: white; color: black; flex-grow: 1; padding: 10px 15px 10px 25px; font-weight: 600; margin-left: -15px; border-radius: 0 4px 4px 0; }
@@ -373,14 +392,44 @@
             };
 
             const renderTop3 = (users, unit) => {
-                let html = '<div class="top-3">';
-                const podiumOrder = [users[1], users[0], users[2]].filter(Boolean);
-                const rankClasses = { 0: 'rank-2', 1: 'rank-1', 2: 'rank-3' };
-                podiumOrder.forEach((user, i) => {
-                    html += `<div class="rank-circle ${rankClasses[i]}">
-                        <div class="pfp">${getInitials(user.username)}</div><div class="name">${user.username}</div>
-                        <div class="score">${formatScore(user[unit])}</div></div>`;
-                });
+                let html = '<div class="top-3-container">';
+                const podium = {
+                    rank1: users[0],
+                    rank2: users[1],
+                    rank3: users[2]
+                };
+
+                html += `
+                    <div class="leaderboard-podium rank-2">
+                        <div class="pfp-container">
+                            <div class="pfp">${getInitials(podium.rank2?.username)}</div>
+                            <div class="rank-badge">2</div>
+                        </div>
+                        <div class="name">${podium.rank2?.username || ''}</div>
+                        <div class="score">${formatScore(podium.rank2?.[unit] || 0)}</div>
+                        <div class="username">@${podium.rank2?.username || ''}</div>
+                    </div>`;
+                html += `
+                    <div class="leaderboard-podium rank-1">
+                         <div class="pfp-container">
+                            <div class="crown"><i class="fas fa-crown"></i></div>
+                            <div class="pfp">${getInitials(podium.rank1?.username)}</div>
+                            <div class="rank-badge">1</div>
+                        </div>
+                        <div class="name">${podium.rank1?.username || ''}</div>
+                        <div class="score">${formatScore(podium.rank1?.[unit] || 0)}</div>
+                        <div class="username">@${podium.rank1?.username || ''}</div>
+                    </div>`;
+                html += `
+                    <div class="leaderboard-podium rank-3">
+                        <div class="pfp-container">
+                            <div class="pfp">${getInitials(podium.rank3?.username)}</div>
+                            <div class="rank-badge">3</div>
+                        </div>
+                        <div class="name">${podium.rank3?.username || ''}</div>
+                        <div class="score">${formatScore(podium.rank3?.[unit] || 0)}</div>
+                        <div class="username">@${podium.rank3?.username || ''}</div>
+                    </div>`;
                 return html + '</div>';
             };
 
@@ -647,7 +696,6 @@
                 const referralLink = `${AppConfig.botLink || ''}/?start=ref${currentUser.referralCode}`;
                 const storyParams = { text: `I'm earning on Besh Besh! 💸 Join me and earn too!\n\n${referralLink}` };
                 const media_url = 'https://i.postimg.cc/4y5QtkSx/cropped-image.png';
-                
                 tg.shareToStory(media_url, storyParams);
             } else {
                 tg.showAlert('Story sharing is not available on your version of Telegram. Please update your app.');
