--- a/admin.html
+++ b/admin.html
@@ -113,7 +113,7 @@
         </div>
     </div>
     <script>
-        const API_BASE_URL = 'https://besh-b.onrender.com';
+        const API_BASE_URL = 'https://besh-b-1.onrender.com';
         let tasksData = {};
 
         document.addEventListener('DOMContentLoaded', () => {
